@@ -45,7 +45,7 @@ PKG_CHECK_MODULES([LIBXML2], libxml-2.0)
 AC_SUBST(LIBXML2_CFLAGS)
 AC_SUBST(LIBXML2_LIBS)
 
-PKG_CHECK_MODULES(VALA, vala-1.0 >= 0.1.5)
+PKG_CHECK_MODULES(VALA, vala-1.0 >= 0.1.6)
 AC_SUBST(VALA_CFLAGS)
 AC_SUBST(VALA_LIBS)
 
