@@ -10,18 +10,19 @@ AM_CFLAGS = \
 	 $(GTK_CFLAGS)
 
 BUILT_SOURCES = example0.stamp example1.stamp
-bin_PROGRAMS = example0 example1
+noinst_PROGRAMS = example0 example1
+
+
+CLEANFILES = example0.h example0.c example1.h example1.c example0.vala example1.vala
 
 ## Example 0
-
 example0_GTKAMLSOURCES = \
 	example0.gtkaml
 
-example0_SOURCES = \
+nodist_example0_SOURCES = \
 	$(example0_GTKAMLSOURCES:.gtkaml=.c) \
 	$(example0_GTKAMLSOURCES:.gtkaml=.h) \
 	example0.stamp	
-
 example0_LDADD = \
 	$(GTK_LIBS) \
 	$(EXTRA_LDFLAGS)
@@ -35,7 +36,7 @@ example0.stamp : $(example0_GTKAMLSOURCES)
 example1_GTKAMLSOURCES = \
 	example1.gtkaml
 
-example1_SOURCES = \
+nodist_example1_SOURCES = \
 	$(example1_GTKAMLSOURCES:.gtkaml=.c) \
 	$(example1_GTKAMLSOURCES:.gtkaml=.h) \
 	example1.stamp	
@@ -48,7 +49,7 @@ example1.stamp : $(example1_GTKAMLSOURCES)
 	../src/gtkamlc $(VALAFLAGS) --pkg gtk+-2.0 $^
 	touch $@
 
-EXTRA_DIST = example0.stamp \
-	example1.stamp \
+
+EXTRA_DIST = \
 	$(example0_GTKAMLSOURCES) \
 	$(example1_GTKAMLSOURCES)
